--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
 </head>
 <body>
 
-  <!-- 🌏 LANDING SECTION -->
+  <!-- 🌏 HERO -->
   <section class="hero">
     <div class="hero-content">
-      <h1>Not goodbye.<br>Just see you in a new land.</h1>
+      <h1>
+        Not goodbye, Saylee Tai.<br>
+        Just see you in a new land.
+      </h1>
       <p>
         From familiar kitchens to new horizons —<br>
         your journey is just beginning.
@@ -27,37 +30,60 @@
     </div>
   </section>
 
-  <!-- 🧭 JOURNEY SECTION -->
+  <!-- 🧭 JOURNEY -->
   <section class="section journey" id="journey">
-    <h2>Your Story So Far</h2>
+    <h2>Saylee Tai’s Journey</h2>
+
     <p class="section-text">
-      You didn’t just learn to cook — you learned to care.<br>
-      From home kitchens filled with laughter,<br>
-      to long hours, mistakes, and proud moments —<br>
-      every step shaped the chef you are today.
+      Saylee Tai, your journey has never been ordinary.<br><br>
+      You turned curiosity into craft,<br>
+      effort into excellence,<br>
+      and food into a language of love.<br><br>
+      Every kitchen you stepped into shaped you,<br>
+      but you shaped it back — with patience, discipline, and heart.<br><br>
+      Now you carry those same values<br>
+      across oceans, into New Zealand.<br><br>
+      Different land. Different ingredients.<br>
+      Same Saylee Tai.
     </p>
 
     <ul class="timeline">
       <li>🏠 First kitchen memories at home</li>
-      <li>🍳 Choosing cooking as a passion</li>
-      <li>🔥 Discipline, patience, and growth</li>
-      <li>✈️ Now stepping into New Zealand</li>
+      <li>🍳 Choosing cooking as a calling</li>
+      <li>🔥 Long hours, quiet strength, steady growth</li>
+      <li>✈️ Carrying home with you to New Zealand</li>
     </ul>
   </section>
 
-  <!-- 🖼 MEMORY WALL -->
+  <!-- 🖼 MOMENTS -->
   <section class="section memories">
     <h2>Moments We’ll Always Remember</h2>
 
     <div class="memory-grid">
-      <div class="memory-card">Food tasted better when you cooked.</div>
-      <div class="memory-card">Every celebration had your signature dish.</div>
-      <div class="memory-card">Late nights, tired feet, happy hearts.</div>
-      <div class="memory-card">Love, served on a plate.</div>
+
+      <div class="memory-card image-card">
+        <img src="https://picsum.photos/seed/saylee1/600/400" alt="Memory">
+        <p>Food always felt warmer when you cooked.</p>
+      </div>
+
+      <div class="memory-card image-card">
+        <img src="https://picsum.photos/seed/saylee2/600/400" alt="Family moment">
+        <p>Every celebration had your touch.</p>
+      </div>
+
+      <div class="memory-card image-card">
+        <img src="https://picsum.photos/seed/saylee3/600/400" alt="Cooking moment">
+        <p>Late nights, tired feet, happy hearts.</p>
+      </div>
+
+      <div class="memory-card">
+        Home always smelled better when you were in the kitchen.
+      </div>
+
     </div>
   </section>
 
-  <!-- 💌 LETTERS SECTION -->
+  <!-- 💌 LETTERS -->
   <section class="section letters">
     <h2>Open When You Miss Home</h2>
 
@@ -67,8 +93,10 @@
         <h3>From Family</h3>
         <button onclick="toggleLetter('letter1')">Open Letter</button>
         <p id="letter1" class="letter-text hidden">
-          No matter how far you go, this will always be home.<br><br>
-          We’re proud of your courage, discipline, and heart.<br><br>
+          No matter how far you go, Saylee Tai,<br>
+          this will always be home.<br><br>
+          We are proud of your courage,<br>
+          your discipline, and your heart.<br><br>
           Cook bravely. Live fully.<br>
           We are always with you.
         </p>
@@ -78,9 +106,10 @@
         <h3>From Siblings & Cousins</h3>
         <button onclick="toggleLetter('letter2')">Open Letter</button>
         <p id="letter2" class="letter-text hidden">
-          When things feel unfamiliar, remember how far you’ve come.<br><br>
+          When things feel unfamiliar,<br>
+          remember how far you’ve already come.<br><br>
           New country. New kitchen.<br>
-          Same strong you.
+          Same strong Saylee Tai.
         </p>
       </div>
 
@@ -89,32 +118,42 @@
         <button onclick="toggleLetter('letter3')">Open Letter</button>
         <p id="letter3" class="letter-text hidden">
           Don’t forget us when your food becomes famous 😉<br><br>
-          Until then — go show New Zealand what you’re made of.
+          Until then —<br>
+          go show New Zealand what you’re made of.
         </p>
       </div>
 
     </div>
   </section>
 
-  <!-- 🇳🇿 NEW CHAPTER -->
+  <!-- 🇮🇳 ➝ 🇳🇿 MAP -->
   <section class="section nz">
     <h2>Aotearoa Awaits</h2>
+
+    <div class="map-container">
+      <img src="https://picsum.photos/seed/indianz/900/450" alt="India to New Zealand Journey">
+      <div class="map-labels">
+        <span class="india">India 🇮🇳</span>
+        <span class="nz-label">New Zealand 🇳🇿</span>
+      </div>
+    </div>
+
     <p class="section-text">
       New ingredients.<br>
       New people.<br>
       New challenges.<br><br>
-      But the same passion that brought you here
-      will take you further than you imagine.
+      But the same passion that started at home<br>
+      now travels across oceans with you.
     </p>
   </section>
 
-  <!-- ❤️ FINAL MESSAGE -->
+  <!-- ❤️ FINAL -->
   <section class="section farewell">
     <h2>Always Home</h2>
     <p class="section-text">
       This isn’t the end of a chapter.<br>
       It’s the start of a bigger one.<br><br>
-      Wherever life takes you —<br>
+      Wherever life takes you, Saylee Tai —<br>
       you are deeply loved.
     </p>
   </section>
